# mmdeep

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/mmdeep-core/: Cargo.toml
crates/mmdeep-core/src/: discovery.rs  layout.rs  lib.rs  parser.rs  spatial.rs  store.rs
examples/: README.md  clustered.mmd  medium.mmd  small.mmd  tiny.mmd  tree.mmd
scripts/: bench.py  generate.py  make_icon.py
src/: App.tsx  api.ts  graphController.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
