[package]
name = "mmdeep"
version = "0.1.0"
edition = "2021"
description = "Desktop viewer for very large Mermaid flowcharts"
license = "MIT"

[lib]
name = "mmdeep_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mmdeep-core = { path = "../crates/mmdeep-core" }
